[project]
name = "currency-exchange"
version = "1.0.0"
description = "REST API service for managing currencies, exchange rates, and calculating currency conversions"
readme = "README.md"
authors = [
    { name = "Ilia Korepanov", email = "ikorepanov@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = ["venv", ".venv", "alembic"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

# for strict mypy:
disallow_untyped_defs = true

[tool.ruff]
exclude = ["alembic"]
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
    "S", # flake8-bandit
    "PT", # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "ASYNC", # flake8-async
    "PTH", # flake8-use-pathlib
    "D", # pydocstyle
    "ERA", # eradicate
    "YTT", # flake8-2020
]
# line too long, handled by black,
# do not perform function calls in argument defaults
# indentation contains tabs
# Allow raising exceptions without from e, for HTTPException
# Checks for pytest.raises calls without a match parameter.
# Checks for ambiguous Unicode characters in docstrings.
# Checks for ambiguous Unicode characters in strings.
# incorrect-blank-line-before-class
# multi-line-summary-first-line
# pydocstyle: checks docstring conventions
# Standard pseudo-random generators are not suitable for cryptographic purposes
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "PT011",
    "RUF002",
    "RUF001",
    "D203",
    "D212",
    "D",
    "S311"
]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "ruff==0.14.10",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
"__init__.py" = ["D"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
